# dbgit

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Compare.cs  Config.cs  Db.cs  Dbgit.csproj  Dockerfile  OutputFormat.cs  Program.cs  README.md  app.py  docker-compose.yml  go.mod  package-lock.json  package.json  pom.xml  pyproject.toml  requirements.txt
Cli/: EnvList.cs
Config/: ConfigLoader.cs  EnvConfig.cs
Db/: IConnectionStringBuilder.cs  IProcDefinitionRepository.cs  SqlConnectionFactory.cs  SqlProcDefinitionRepository.cs
Domain/: ProcDefinition.cs
Errors/: DbgitException.cs  ErrorCode.cs  ExceptionMapper.cs
Hooks/: HookEvent.cs  HookPipeline.cs  IHook.cs
Mapping/: ProcDefinitionMapper.cs  ProcDefinitionRowDto.cs
Render/: ConcreteRenderers.cs  Renderer.cs  RendererRegistryFactory.cs
Service/: ProcCompareService.cs
Validation/: CliOptionsValidator.cs
docs/: architecture.md  config.md  index.html  troubleshooting.md
examples/: 01_dotnet_run_text.sh  01_go_run_text.sh  01_rust_text.sh  01_text_prd_stg.sh  01_ts_text.sh  02_dotnet_run_json.sh  02_go_run_json.sh  02_rust_json.sh  02_text_four_envs.sh  02_ts_json.sh  03_dotnet_run_markdown.sh  03_go_run_markdown.sh  03_json_default.sh  03_rust_markdown.sh  03_ts_markdown.sh  04_dotnet_object_id.sh  04_go_object_id.sh  04_markdown.sh  04_rust_object_id.sh  04_ts_object_id.sh  05_dotnet_custom_dotenv.sh  05_go_custom_dotenv.sh  05_object_id.sh  05_rust_custom_dotenv.sh  05_ts_custom_dotenv.sh  06_custom_env_list.sh  06_dotnet_help.sh  06_go_help.sh  06_ts_help.sh  (+20 more)
(+138 files in other folders)
