[package]
name = "dbgit"
version = "0.1.0"
edition = "2021"
description = "SQL Server 프로시저/함수 환경 비교 CLI"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
futures-util = { version = "0.3", features = ["io"] }
regex = "1.10"
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tiberius = "0.12"
